# sovereign-sdlc

./: .gitignore  AUDIT_v0.4.0.md  AUDIT_v0.4.0_FINAL.md  Cargo.toml  LICENSE  README.md  TECHNICAL_SNAPSHOT.md
crates/api/: Cargo.toml
crates/api/src/: client.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: diff.rs  docs.rs  grimoire.rs  hardware_env.rs  history.rs  lib.rs  memdir.rs  message.rs  model_db.rs  permissions.rs  system_prompt.rs
crates/query/: Cargo.toml
crates/query/src/: agent.rs  agent_loop.rs  compact.rs  consensus.rs  coordinator.rs  lib.rs  router.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs  report.rs  security.rs  tool_trait.rs  tools_impl.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  approval.rs  buddy.rs  lib.rs  loading.rs  splash.rs
