[package]
name = "sovereign-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library — hardware detection, config, shared types"

[dependencies]
sysinfo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
similar = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
# Vulkan/CUDA detection via dynamic library probing
libloading = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8"
